--- a/BattleInfoPlugin/Properties/Settings.settings
+++ b/BattleInfoPlugin/Properties/Settings.settings
@@ -1,18 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="BattleInfoPlugin.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="IsEnabledBattleEndNotify" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="EnemyDataFilePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">BattleInfoPlugin_EnemyData.txt</Value>
-    </Setting>
-    <Setting Name="MasterDataFilePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">BattleInfoPlugin_MasterData.txt</Value>
-    </Setting>
-    <Setting Name="CacheDirPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">BattleInfoPluginData</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
