--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -158,13 +158,21 @@
     <Compile Include="Models\FleetData.cs" />
     <Compile Include="Models\FleetType.cs" />
     <Compile Include="Models\Formation.cs" />
+    <Compile Include="Models\Raw\IPracticeDayBattleMembers.cs" />
     <Compile Include="Models\MapArea.cs" />
     <Compile Include="Models\MapCell.cs" />
     <Compile Include="Models\MapCellData.cs" />
     <Compile Include="Models\MapData.cs" />
     <Compile Include="Models\MapInfo.cs" />
     <Compile Include="Models\Notifiers\BattleEndNotifier.cs" />
+    <Compile Include="Models\Raw\IAirBattleMembers.cs" />
+    <Compile Include="Models\Raw\IAirStageMembers.cs" />
+    <Compile Include="Models\Raw\IBattleFormationInfo.cs" />
     <Compile Include="Models\Raw\ICommonBattleMembers.cs" />
+    <Compile Include="Models\Raw\ICombinedBattleMembers.cs" />
+    <Compile Include="Models\Raw\IFleetBattleInfo.cs" />
+    <Compile Include="Models\Raw\IDayBattleMembers.cs" />
+    <Compile Include="Models\Raw\IMidnightBattleMembers.cs" />
     <Compile Include="Models\Repositories\EnemyData.cs" />
     <Compile Include="Models\Settings\BattleWindowSettings.cs" />
     <Compile Include="Models\Settings\NotifierSettings.cs" />
