--- a/BattleInfoPluginTest/BattleInfoPluginTest.csproj
+++ b/BattleInfoPluginTest/BattleInfoPluginTest.csproj
@@ -70,6 +70,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ChainingAssertion.MSTest.cs" />
+    <Compile Include="ConverterTest.cs" />
     <Compile Include="ExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
