陆基航空队Stage显示

--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Models\Raw\member_mapinfo.cs" />
     <Compile Include="Models\Raw\sortie_ld_airbattle.cs" />
     <Compile Include="Models\Repositories\EnemyData.cs" />
+    <Compile Include="Models\Settings\BattleDataSettings.cs" />
     <Compile Include="Models\Settings\BattleWindowSettings.cs" />
     <Compile Include="Models\CellTypeConverter.cs" />
     <Compile Include="Models\Settings\NotifierSettings.cs" />
