--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Models\FleetType.cs" />
     <Compile Include="Models\Formation.cs" />
     <Compile Include="Models\ItemType.cs" />
+    <Compile Include="Models\LandBaseAirCombatResult.cs" />
     <Compile Include="Models\MapPoint.cs" />
     <Compile Include="Models\Raw\IAirBaseAttack.cs" />
     <Compile Include="Models\Raw\IPracticeData.cs" />
@@ -227,6 +228,7 @@
     <Compile Include="ViewModels\FleetViewModel.cs" />
     <Compile Include="ViewModels\GetLostItemViewModel.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
+    <Compile Include="ViewModels\LandBaseAirCombatResultViewModel.cs" />
     <Compile Include="ViewModels\NextPointInfoViewModel.cs" />
     <Compile Include="ViewModels\TabItemViewModel.cs" />
     <Compile Include="ViewModels\ToolViewModel.cs" />
@@ -242,6 +244,7 @@
     </Compile>
     <Compile Include="Views\Controls\Cell.cs" />
     <Compile Include="Views\Controls\Flag.cs" />
+    <Compile Include="Views\Controls\PlaceHolderTextControl.cs" />
     <Compile Include="Views\Converters\AddDoubleValueConverter.cs" />
     <Compile Include="Views\Converters\AdditionalNameColorConverter.cs" />
     <Compile Include="Views\Converters\AttackTypeToDisplayTextConverter.cs" />
@@ -278,6 +281,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\Flag.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\PlaceHolderTextControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
