--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Models\Settings\SimpleSettingsBase.cs" />
     <Compile Include="Models\Settings\SettingsHelper.cs" />
     <Compile Include="Models\BattleState.cs" />
+    <Compile Include="Models\Settings\_PathsSettings.cs" />
     <Compile Include="NotificationType.cs" />
     <Compile Include="Models\Raw\battle_midnight_battle.cs" />
     <Compile Include="Models\Raw\battle_midnight_sp_midnight.cs" />
