--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -45,36 +45,36 @@
       <HintPath>..\packages\KanColleViewer.Composition.1.4.0\lib\net45\KanColleViewer.Composition.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="KanColleViewer.Controls, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\KanColleViewer.Controls.1.3.1\lib\net46\KanColleViewer.Controls.dll</HintPath>
+    <Reference Include="KanColleViewer.Controls, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\KanColleViewer.Controls.1.3.2\lib\net46\KanColleViewer.Controls.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="KanColleViewer.PluginAnalyzer, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\KanColleViewer.PluginAnalyzer.1.1.1.0\lib\net46\KanColleViewer.PluginAnalyzer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="KanColleWrapper, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\KanColleWrapper.1.4.0\lib\net46\KanColleWrapper.dll</HintPath>
+    <Reference Include="KanColleWrapper, Version=1.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\KanColleWrapper.1.6.2\lib\net46\KanColleWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Livet, Version=1.3.0.0, Culture=neutral, PublicKeyToken=b0b1d3f711ef38cb, processorArchitecture=MSIL">
       <HintPath>..\packages\LivetCask.1.3.1.0\lib\net45\Livet.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="log4net, Version=1.2.14.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.4\lib\net45-full\log4net.dll</HintPath>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MetroRadiance, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MetroRadiance.2.2.0\lib\net46\MetroRadiance.dll</HintPath>
+    <Reference Include="MetroRadiance, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroRadiance.2.3.0\lib\net46\MetroRadiance.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MetroRadiance.Chrome, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MetroRadiance.Chrome.2.1.0\lib\net46\MetroRadiance.Chrome.dll</HintPath>
+    <Reference Include="MetroRadiance.Chrome, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroRadiance.Chrome.2.2.0\lib\net46\MetroRadiance.Chrome.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MetroRadiance.Core, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MetroRadiance.Core.2.1.0\lib\net46\MetroRadiance.Core.dll</HintPath>
+    <Reference Include="MetroRadiance.Core, Version=2.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroRadiance.Core.2.2.1\lib\net46\MetroRadiance.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MetroTrilithon, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -94,7 +94,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="StatefulModel, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\StatefulModel.0.5.0\lib\portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10\StatefulModel.dll</HintPath>
+      <HintPath>..\packages\StatefulModel.0.6.0\lib\portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10\StatefulModel.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SwfFormat, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -143,44 +143,45 @@
     <Compile Include="Annotations\DarkAttribute.cs" />
     <Compile Include="Annotations\ElementalAttribute.cs" />
     <Compile Include="Annotations\LightAttribute.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="ItemsCollection.cs" />
     <Compile Include="KcsResourceWriter.cs" />
     <Compile Include="Models\AirCombatResult.cs" />
     <Compile Include="Models\AirSupremacy.cs" />
     <Compile Include="Models\AttackType.cs" />
+    <Compile Include="Models\BattleDamage.cs" />
     <Compile Include="Models\BattleData.cs" />
-    <Compile Include="Models\BattleResult.cs" />
-    <Compile Include="Models\BattleResultProvider.cs" />
+    <Compile Include="Models\BattleFleet.cs" />
+    <Compile Include="Models\BattleResultRank.cs" />
+    <Compile Include="Models\BattleData.Result.cs" />
     <Compile Include="Models\BattleSituation.cs" />
     <Compile Include="Models\CellType.cs" />
     <Compile Include="Models\FleetDamages.cs" />
+    <Compile Include="Models\FleetDamagesCombined.cs" />
     <Compile Include="Models\FleetData.cs" />
     <Compile Include="Models\FleetType.cs" />
     <Compile Include="Models\Formation.cs" />
     <Compile Include="Models\ItemType.cs" />
     <Compile Include="Models\LandBaseAirCombatResult.cs" />
-    <Compile Include="Models\MapPoint.cs" />
-    <Compile Include="Models\Raw\IAirBaseAttack.cs" />
-    <Compile Include="Models\Raw\IPracticeData.cs" />
+    <Compile Include="Models\MapCellInfo.cs" />
+    <Compile Include="Models\Raw\combined_battle_each_battle.cs" />
+    <Compile Include="Models\Raw\combined_battle_ec_battle.cs" />
+    <Compile Include="Models\Raw\combined_battle_ec_midnight_battle.cs" />
     <Compile Include="Models\MapArea.cs" />
     <Compile Include="Models\MapCell.cs" />
     <Compile Include="Models\MapCellData.cs" />
     <Compile Include="Models\MapData.cs" />
     <Compile Include="Models\MapInfo.cs" />
     <Compile Include="Models\Notifiers\BattleEndNotifier.cs" />
-    <Compile Include="Models\Raw\IAirBattleMembers.cs" />
-    <Compile Include="Models\Raw\IAirStageMembers.cs" />
     <Compile Include="Models\Raw\IBattleFormationInfo.cs" />
     <Compile Include="Models\Notifiers\BrowserImageMonitor.cs" />
     <Compile Include="Models\Raw\combined_battle_ld_airbattle.cs" />
     <Compile Include="Models\Raw\ICommonBattleMembers.cs" />
-    <Compile Include="Models\Raw\ICombinedBattleMembers.cs" />
-    <Compile Include="Models\Raw\IFleetBattleInfo.cs" />
-    <Compile Include="Models\Raw\IDayBattleMembers.cs" />
-    <Compile Include="Models\Raw\IMidnightBattleMembers.cs" />
     <Compile Include="Models\Raw\ICommonFirstBattleMembers.cs" />
     <Compile Include="Models\Raw\member_mapinfo.cs" />
     <Compile Include="Models\Raw\sortie_ld_airbattle.cs" />
     <Compile Include="Models\Repositories\EnemyData.cs" />
+    <Compile Include="Models\Repositories\EnemyDataUpdater.cs" />
     <Compile Include="Models\Settings\BattleDataSettings.cs" />
     <Compile Include="Models\Settings\BattleWindowSettings.cs" />
     <Compile Include="Models\CellTypeConverter.cs" />
@@ -220,7 +221,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="SortieDataListener.cs" />
     <Compile Include="ViewModels\AirCombatResultViewModel.cs" />
     <Compile Include="ViewModels\BattleViewModel.cs" />
     <Compile Include="ViewModels\BattleWindowViewModel.cs" />
@@ -231,13 +231,12 @@
     <Compile Include="ViewModels\Enemies\EnemyCellViewModel.cs" />
     <Compile Include="ViewModels\Enemies\EnemyShipViewModel.cs" />
     <Compile Include="ViewModels\EnemyWindowViewModel.cs" />
-    <Compile Include="ViewModels\FleetViewModel.cs" />
+    <Compile Include="ViewModels\BattleFleetViewModel.cs" />
     <Compile Include="ViewModels\IAirCombatResultViewModel.cs" />
-    <Compile Include="ViewModels\SingleFleetViewModel.cs" />
     <Compile Include="ViewModels\GetLostItemViewModel.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\LandBaseAirCombatResultViewModel.cs" />
-    <Compile Include="ViewModels\NextPointInfoViewModel.cs" />
+    <Compile Include="ViewModels\NextCellInfoViewModel.cs" />
     <Compile Include="ViewModels\TabItemViewModel.cs" />
     <Compile Include="ViewModels\ToolViewModel.cs" />
     <Compile Include="Views\BattleView.xaml.cs">
@@ -268,8 +267,8 @@
     <Compile Include="Views\GetLostItemView.xaml.cs">
       <DependentUpon>GetLostItemView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\NextPointInfoView.xaml.cs">
-      <DependentUpon>NextPointInfoView.xaml</DependentUpon>
+    <Compile Include="Views\NextCellInfoView.xaml.cs">
+      <DependentUpon>NextCellInfoView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ToolView.xaml.cs">
       <DependentUpon>ToolView.xaml</DependentUpon>
@@ -325,7 +324,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\NextPointInfoView.xaml">
+    <Page Include="Views\NextCellInfoView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -348,6 +347,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
+    <Compile Include="Models\BattleData.Damage.cs" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -368,7 +368,7 @@
   <ItemGroup>
     <Analyzer Include="..\packages\KanColleViewer.PluginAnalyzer.1.1.1.0\analyzers\KanColleViewer.Composition.dll" />
     <Analyzer Include="..\packages\KanColleViewer.PluginAnalyzer.1.1.1.0\analyzers\KanColleViewer.PluginAnalyzer.dll" />
-    <Analyzer Include="..\packages\NotifyPropertyChangedGenerator.1.1.0.1\analyzers\dotnet\cs\NotifyPropertyChangedGenerator.dll" />
+    <Analyzer Include="..\packages\NotifyPropertyChangedGenerator.1.1.1.0\analyzers\dotnet\cs\NotifyPropertyChangedGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="SHDocVw">
