--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Models\Raw\ICommonBattleMembers.cs" />
     <Compile Include="Models\Raw\ICommonFirstBattleMembers.cs" />
     <Compile Include="Models\Raw\member_mapinfo.cs" />
+    <Compile Include="Models\Raw\member_practice_enemyinfo.cs" />
     <Compile Include="Models\Raw\sortie_ld_airbattle.cs" />
     <Compile Include="Models\Repositories\EnemyData.cs" />
     <Compile Include="Models\Repositories\EnemyDataUpdater.cs" />
