--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Models\BattleSituation.cs" />
     <Compile Include="Models\CellType.cs" />
     <Compile Include="Models\FleetData.cs" />
+    <Compile Include="Models\FleetStatus.cs" />
     <Compile Include="Models\FleetType.cs" />
     <Compile Include="Models\Formation.cs" />
     <Compile Include="Models\ItemType.cs" />
