--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -168,6 +168,8 @@
     <Compile Include="Models\Raw\ICommonFirstBattleMembers.cs" />
     <Compile Include="Models\Raw\member_mapinfo.cs" />
     <Compile Include="Models\Raw\member_practice_enemyinfo.cs" />
+    <Compile Include="Models\Raw\combined_battle_ld_shooting.cs" />
+    <Compile Include="Models\Raw\sortie_ld_shooting.cs" />
     <Compile Include="Models\Raw\sortie_ld_airbattle.cs" />
     <Compile Include="Models\Repositories\EnemyData.cs" />
     <Compile Include="Models\Repositories\EnemyDataUpdater.cs" />
