--- a/BattleInfoPluginTest/BattleInfoPluginTest.csproj
+++ b/BattleInfoPluginTest/BattleInfoPluginTest.csproj
@@ -46,8 +46,10 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xaml" />
+    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <Choose>
@@ -66,6 +68,7 @@
     <Compile Include="ChainingAssertion.MSTest.cs" />
     <Compile Include="ConverterTest.cs" />
     <Compile Include="ExtensionsTest.cs" />
+    <Compile Include="Models\BattleDataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
